# indice-validacao-streamlit-

./: .flake8  .gitignore  DEPLOY.md  DEPLOY_STREAMLIT_CLOUD.md  ESTRUTURA.md  GITHUB_SETUP.md  IIP-CUESTIONARIO_2025_hierarquico.csv  README.md  README_DEPLOY.md  SETUP_INSTRUCTIONS.md  TROUBLESHOOTING.md  app.py  credentials.json  export_validations.py  indice-469005-a545372568db.json  packages.txt  pyproject.toml  requirements.txt  run_app.py  setup_env.bat  setup_env.sh  setup_google_sheets.py  streamlit_app.py  test_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml  credentials.json  secrets.toml.template
data/: chile_iip_2025_preparado.csv
